aws-alb-controller/ingress/ingres_yaml/appingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:123456789012:certificate/aaaa-bbbb-cccc-xxxx
    alb.ingress.kubernetes.io/group.name: dev
    alb.ingress.kubernetes.io/group.order: "200"
    alb.ingress.kubernetes.io/healthcheck-path: /health-check.do
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    kubernetes.io/ingress.class: alb
  labels:
    dev: app
  name: app
  namespace: dev
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: app
              servicePort: 8880
